--- a/_posts/2021-04-28-bitna.md
+++ b/_posts/2021-04-28-bitna.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[전자책]빛나(서울 하늘 아래) - 서울 속의 천일 야화"
 date: 2021-04-28
-description: ""
+description: "작가에 대한 이름을 가리고 읽는다면 우리와 같은 한국인이 적은게 아닐까 하는 착각이 들 정도였습니다. 그만큼 르 클레지오 작가는 한국에 꽤 많은 관심을 가졌던 것 같습니다."
 image: https://img.ridicdn.net/cover/1079000090/xxlarge#1
 category: '독서노트'
 tags: 
@@ -11,8 +11,8 @@ tags:
  - 천일야화
  - 이야기꾼
  - 그래도삶은계속된다
-twitter_text: ''
-introduction: ""
+twitter_text: '작가에 대한 이름을 가리고 읽는다면 우리와 같은 한국인이 적은게 아닐까 하는 착각이 들 정도였습니다. 그만큼 르 클레지오 작가는 한국에 꽤 많은 관심을 가졌던 것 같습니다.'
+introduction: "작가에 대한 이름을 가리고 읽는다면 우리와 같은 한국인이 적은게 아닐까 하는 착각이 들 정도였습니다. 그만큼 르 클레지오 작가는 한국에 꽤 많은 관심을 가졌던 것 같습니다."
 ---
 
 [리디북스](https://ridibooks.com/books/1079000090)
